# TheCoalitionsWarOfEmpires

./: .gitignore  Cargo.toml  flake.nix  optimize_models.sh  twitter_config.toml.example  victory_system_with_twitter.rs.backup
assets/models/central_powers/airplanes/: red_baron.glb
assets/models/central_powers/tanks/: panzerwagen.glb  steam_wheel_tank.glb
assets/models/central_powers/towers/: reichstag.glb
assets/models/entente/airplanes/: breguet_14.glb  ilya_muromets.glb  sopwith_camel.glb
assets/models/entente/tanks/: tsar_tank.glb
assets/models/entente/towers/: big_ben.glb  eiffel.glb
assets/models/farm/: mine.glb
assets/textures/: WorldWar.glb
src/: game_plugin.rs  lib.rs  main.rs
src/game/: asset_loader.rs  click_colliders.rs  components.rs  farm.rs  mine.rs  mod.rs  petrochemical_plant.rs  resources.rs  scene_colliders.rs  setup.rs  steel_factory.rs  trench.rs
src/game/units/: aircraft.rs  infantry.rs  mod.rs  tanks.rs
src/input/: camera.rs  game_controls.rs  mod.rs  placement.rs  selection.rs
src/menu/: common.rs  main_menu.rs  mod.rs  pause_menu.rs  settings_menu.rs
src/systems/: ai_economy.rs  ai_opponent.rs  aircraft.rs  cheat_system.rs  combat.rs  enemy_visual_markers.rs  mod.rs  movement.rs  tower.rs  turn_system.rs  twitter_client.rs  victory_system.rs
src/ui/: confirm_dialog.rs  enemy_highlighting.rs  gizmos.rs  health_bars.rs  menu.rs  mod.rs  money_ui.rs  notification_system.rs  purchase_menu.rs  splash.rs  turn_ui.rs
src/utils/: effects.rs  mod.rs
