[package]
name = "the_coalitions_war_of_empires"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_hanabi = {version = "0.10.0" ,default-features = false, features = ["3d"]} 
bevy_mod_picking = "0.19.0"

# optimization in debug mode
[profile.dev]
opt-level = 1

# optimizations for dependencies 
[profile.dev.package."*"]
opt-level = 3
