[package]
name = "the_coalitions_war_of_empires"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", features = ["jpeg", "mp3"] }
bevy_hanabi = {version = "0.10.0" ,default-features = false, features = ["3d"]} 
bevy_mod_picking = "0.19.0"
big-brain = "0.20.0"
bevy_rapier3d = "0.25.0"
rand = "0.8.5"
webbrowser = "0.8.12"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.0", features = ["full"] }
toml = "0.8"
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
url = "2.4"

# optimization in debug mode
[profile.dev]
opt-level = 1

# optimizations for dependencies 
[profile.dev.package."*"]
opt-level = 3